--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ oauthlib==3.1.1
 protobuf==3.18.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyodbc==4.0.32
 pyparsing==2.4.7
 pytz==2021.1
 requests==2.26.0
@@ -29,3 +30,4 @@ uritemplate==3.0.1
 urllib3==1.26.6
 waitress==2.0.0
 whitenoise==5.3.0
+pyodbc==4.0.32
